@@ -33,7 +33,15 @@ abstract class BaseIterator<V, I extends CloseableIterator<? extends V>, O exten
 {
     I input;
     V next;
-    Stop stop; // applies at the end of the current next()
+
+    // We require two stop signals for correctness, since the `stop` reference of the base iterator can "leak"
+    // into the transformations stack. Using a single `stop` signal may result into the inconsistent state,
+    // since stopping transformation would stop only the child iterator.
+
+    // Signals that the base iterator has been signalled to stop. Applies at the end of the current next().
+    Stop stop;
+    // Signals that the current child iterator has been signalled to stop.
+    Stop stopChild;
 
     static class Stop
     {
@@ -49,12 +57,14 @@ abstract class BaseIterator<V, I extends CloseableIterator<? extends V>, O exten
         this.input = copyFrom.input;
         this.next = copyFrom.next;
         this.stop = copyFrom.stop;
+        this.stopChild = copyFrom.stopChild;
     }
 
     BaseIterator(I input)
     {
         this.input = input;
         this.stop = new Stop();
+        this.stopChild = this.stop;
     }
 
     /**
@@ -122,6 +132,7 @@ abstract class BaseIterator<V, I extends CloseableIterator<? extends V>, O exten
                 BaseIterator abstr = (BaseIterator) newContents;
                 prefix = abstr;
                 input = (I) abstr.input;
+                stopChild = abstr.stop;
                 next = apply((V) abstr.next, holder.length); // must apply all remaining functions to the next, if any
             }
 
